# HolePatternGenerator

./: Cargo.toml  CreateHole1.FCMacro  README.md  build.rs  config.json  cords.csv  createHoleAsPlanev0.1.FCMacro  createHolePlanev0.2.FCMacro  createholeonplane.FCMacro  holePatternCreation.FCMacro
res/: firstPart.FCMacro  secondPart.FCMacro
src/: main.rs
