[package]
name = "hole_pattern_generator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
copy_to_output = "2.0"
glob = "0.3"